add components - breadcrumbs and rounded buttons. Update styling of documentation.

--- a/docs-og/metaphor-custom-components.html
+++ b/docs-og/metaphor-custom-components.html
@@ -1020,6 +1020,110 @@
   <hr><hr><hr><hr>
 
   <div class="container">
+    <h3>Breadcrumbs</h3>
+
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i> Home</a></li>
+        <li class="breadcrumb-item"><a href="#">Library</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Data</li>
+      </ol>
+    </nav>
+  </div>
+
+  <hr><hr><hr><hr>
+
+  <div class="container">
+    <h3>Buttons</h3>
+
+    <button type="button" class="btn btn-primary">Primary</button>
+    <button type="button" class="btn btn-secondary">Secondary</button>
+    <button type="button" class="btn btn-success">Success</button>
+    <button type="button" class="btn btn-danger">Danger</button>
+    <button type="button" class="btn btn-warning">Warning</button>
+    <button type="button" class="btn btn-info">Info</button>
+    <button type="button" class="btn btn-light">Light</button>
+    <button type="button" class="btn btn-dark">Dark</button>
+    <br><br><br>
+    
+    <button type="button" class="btn btn-outline-primary">Primary</button>
+    <button type="button" class="btn btn-outline-secondary">Secondary</button>
+    <button type="button" class="btn btn-outline-success">Success</button>
+    <button type="button" class="btn btn-outline-danger">Danger</button>
+    <button type="button" class="btn btn-outline-warning">Warning</button>
+    <button type="button" class="btn btn-outline-info">Info</button>
+    <button type="button" class="btn btn-outline-light">Light</button>
+    <button type="button" class="btn btn-outline-dark">Dark</button>
+    <br><br><br>
+
+
+    <button type="button" class="btn btn-rounded btn-outline-primary">Primary</button>
+    <button type="button" class="btn btn-rounded btn-outline-secondary">Secondary</button>
+    <button type="button" class="btn btn-rounded btn-outline-success">Success</button>
+    <button type="button" class="btn btn-rounded btn-outline-danger">Danger</button>
+    <button type="button" class="btn btn-rounded btn-outline-warning">Warning</button>
+    <button type="button" class="btn btn-rounded btn-outline-info">Info</button>
+    <button type="button" class="btn btn-rounded btn-outline-light">Light</button>
+    <button type="button" class="btn btn-rounded btn-outline-dark">Dark</button>
+    <br><br><br>
+
+    <button type="button" class="btn btn-rounded btn-lg btn-outline-primary">Primary</button>
+    <button type="button" class="btn btn-rounded btn-lg btn-outline-secondary">Secondary</button>
+    <button type="button" class="btn btn-rounded btn-lg btn-outline-success">Success</button>
+    <button type="button" class="btn btn-rounded btn-lg btn-outline-danger">Danger</button>
+    <button type="button" class="btn btn-rounded btn-lg btn-outline-warning">Warning</button>
+    <button type="button" class="btn btn-rounded btn-lg btn-outline-info">Info</button>
+    <button type="button" class="btn btn-rounded btn-lg btn-outline-light">Light</button>
+    <button type="button" class="btn btn-rounded btn-lg btn-outline-dark">Dark</button>
+    <br><br><br>
+ 
+    <button type="button" class="btn btn-rounded btn-sm btn-outline-primary">Primary</button>
+    <button type="button" class="btn btn-rounded btn-sm btn-outline-secondary">Secondary</button>
+    <button type="button" class="btn btn-rounded btn-sm btn-outline-success">Success</button>
+    <button type="button" class="btn btn-rounded btn-sm btn-outline-danger">Danger</button>
+    <button type="button" class="btn btn-rounded btn-sm btn-outline-warning">Warning</button>
+    <button type="button" class="btn btn-rounded btn-sm btn-outline-info">Info</button>
+    <button type="button" class="btn btn-rounded btn-sm btn-outline-light">Light</button>
+    <button type="button" class="btn btn-rounded btn-sm btn-outline-dark">Dark</button>
+    <br><br><br>
+
+
+    <button type="button" class="btn btn-rounded btn-primary">Primary</button>
+    <button type="button" class="btn btn-rounded btn-secondary">Secondary</button>
+    <button type="button" class="btn btn-rounded btn-success">Success</button>
+    <button type="button" class="btn btn-rounded btn-danger">Danger</button>
+    <button type="button" class="btn btn-rounded btn-warning">Warning</button>
+    <button type="button" class="btn btn-rounded btn-info">Info</button>
+    <button type="button" class="btn btn-rounded btn-light">Light</button>
+    <button type="button" class="btn btn-rounded btn-dark">Dark</button>
+    <br><br><br>
+    
+    <button type="button" class="btn btn-lg btn-rounded btn-primary">Primary</button>
+    <button type="button" class="btn btn-lg btn-rounded btn-secondary">Secondary</button>
+    <button type="button" class="btn btn-lg btn-rounded btn-success">Success</button>
+    <button type="button" class="btn btn-lg btn-rounded btn-danger">Danger</button>
+    <button type="button" class="btn btn-lg btn-rounded btn-warning">Warning</button>
+    <button type="button" class="btn btn-lg btn-rounded btn-info">Info</button>
+    <button type="button" class="btn btn-lg btn-rounded btn-light">Light</button>
+    <button type="button" class="btn btn-lg btn-rounded btn-dark">Dark</button>
+    <br><br><br>    
+
+    <button type="button" class="btn btn-sm btn-rounded btn-primary">Primary</button>
+    <button type="button" class="btn btn-sm btn-rounded btn-secondary">Secondary</button>
+    <button type="button" class="btn btn-sm btn-rounded btn-success">Success</button>
+    <button type="button" class="btn btn-sm btn-rounded btn-danger">Danger</button>
+    <button type="button" class="btn btn-sm btn-rounded btn-warning">Warning</button>
+    <button type="button" class="btn btn-sm btn-rounded btn-info">Info</button>
+    <button type="button" class="btn btn-sm btn-rounded btn-light">Light</button>
+    <button type="button" class="btn btn-sm btn-rounded btn-dark">Dark</button>
+    <br><br><br>    
+
+  </div>
+
+  <hr><hr><hr><hr>
+
+  
+  <div class="container">
     <h3>To Do:</h3>
     <ul>
       <li>
