major improvements to the rise-arrow component. also update the documentation regarding the rise-arrow.

--- a/docs-og/metaphor-custom-components.html
+++ b/docs-og/metaphor-custom-components.html
@@ -806,8 +806,48 @@
   <div class="container">
     <h3>Rise Arrow <small>(still a WIP)</small></h3>
     <br><br>
-    <div class="rise-arrow">
+    <div class="row">
+      <div class="col-3">
+        <div>
+          <div class="rise-arrow">
+          </div>
+        </div>
+      </div>
+
+      <div class="col-3">
+          <div>
+            <div class="rise-arrow rise-arrow--2tone">
+            </div>
+          </div>
+        </div>
+
+        <div class="col-3">
+            <div>
+                <div class="rise-arrow rise-arrow--2tone">
+                </div>
+                <div class="rise-arrow rise-arrow--middle">
+                </div>
+                <div class="rise-arrow rise-arrow--bottom">
+                </div>
+            </div>
+          </div>
+
+      <div class="col-3">
+        <div>
+            <div class="rise-arrow rise-arrow--2tone">
+            </div>
+            <div class="rise-arrow rise-arrow--2tone">
+            </div>
+            <div class="rise-arrow rise-arrow--2tone">
+            </div>
+            <div class="rise-arrow rise-arrow--middle">
+            </div>
+            <div class="rise-arrow rise-arrow--bottom">
+            </div>
+        </div>
+      </div>
     </div>
+
     <br><br>
 
    <!--  <div class="rise-arrow rise-arrow--2tone">
