--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 class="mt-3">MetaphorV2</h1>
     <ul class="list-group mb-5">
       <li class="list-group-item">
-        <a href="/bootstrap-docs/4.1/components/buttons/">Bootstrap Docs (with MetaphorV2 theme applied)</a>
+        <a href="bootstrap-docs/4.1/components/buttons/">Bootstrap Docs (with MetaphorV2 theme applied)</a>
       </li>
       <li class="list-group-item">
         <a href="docs-og/bootstrap-components.html">Page displaying most bootstrap components (with MetaphorV2 theme applied) </a>
